<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/f_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginHorizontal="15dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/f_no"
        android:textSize="25sp"
         />

    <EditText
        android:id="@+id/s_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/s_no"
        android:textSize="25sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="30dp">

        <Button
            android:id="@+id/add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minWidth="120dp"
            android:minHeight="80dp"
            android:padding="20dp"
            android:text="@string/add"
            android:textSize="39sp"
            android:background="@drawable/custom_button"
            android:layout_margin="14dp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/sub"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minWidth="120dp"
            android:minHeight="80dp"
            android:padding="20dp"
            android:text="@string/sub"
            android:textSize="39sp"
            android:background="@drawable/custom_button"
            android:layout_margin="14dp"

            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <Button
            android:id="@+id/mul"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minWidth="120dp"
            android:minHeight="80dp"
            android:padding="20dp"
            android:text="@string/mul"
            android:textSize="39sp"
            android:background="@drawable/custom_button"
            android:layout_margin="14dp" />

        <Button
            android:id="@+id/div"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minWidth="120dp"
            android:minHeight="80dp"
            android:padding="20dp"
            android:text="@string/div"
            android:textSize="39sp"
            android:background="@drawable/custom_button"
            android:layout_margin="14dp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <Button
        android:id="@+id/equals"
        android:layout_width="199dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="22dp"
        android:background="@drawable/custom_button"
        android:padding="22dp"

        android:text="@string/equals"
        android:textSize="40sp"/>
    <Button
        android:id="@+id/ac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="22dp"
        android:backgroundTint="@color/black"
        android:padding="22dp"
        android:text="@string/ac"
        android:textSize="40sp"/>

</LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/result"
        
        android:layout_marginTop="55dp"
        android:layout_marginHorizontal="10dp"
        android:layout_width="match_parent"
        android:layout_height="90dp" >



        <TextView
            android:id="@+id/oo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            android:hint="@string/oo"
            android:textSize="55sp"



            />


    </androidx.cardview.widget.CardView>


</LinearLayout>



